--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
+    "test:ci": "ng test --watch false",
     "format": "prettier --write \"src/**/*.{ts,html,css,scss}\""
   },
   "private": true,
